--- a/css/explore.css
+++ b/css/explore.css
@@ -1,17 +1,45 @@
+/* Explore page */
 .for-kids, .for-teachers, .researchers {
     display: flex;
     border-bottom: 10px solid var(--theme);
     padding: 0px 0px 40px 0px;
     margin-bottom: 40px;
     justify-content: space-between;
+    flex-flow: row nowrap;
+    gap: 20px;
 }
 
 .text {
-    margin-right: 20px;
     max-width: 1100px;
+    font-size: 20px;
 }
 
 img {
     width: 460px;
     height: max-content;
+}
+
+
+/* Transitions */
+.for-kids, .for-teachers, .researchers, .text, img {
+    transition: 0.1s;
+}
+
+
+/* Media queries */
+@media only screen and (max-width: 1300px) {
+    .for-kids, .for-teachers, .researchers {
+        flex-flow: column wrap;
+        gap: 10px;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    text {
+        max-width: 100%;
+    }
+
+    img {
+        width: 100%;
+    }
 }
