--- a/css/navigation-footer.css
+++ b/css/navigation-footer.css
@@ -59,6 +59,20 @@ header a {
     border: solid 1px var(--input-border);
 }
 
+#menu-checkbox,
+.hamburger-icon {
+    display: none;
+    position: absolute;
+    right: 0;
+}
+
+.hamburger-icon {
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 20px;
+    user-select: none;
+}
+
 
 /* Footer */
 footer {
@@ -115,4 +129,86 @@ footer .f-content .f-copyright {
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+/* Transitions */
+footer, header {
+    transition: 0.1s;
+}
+
+/* Media queries */
+@media only screen and (max-width: 1300px) {
+    header {
+        height: 90px;
+        padding: 0 20px;
+    }
+
+    #logo {
+        border-bottom: none;
+        width: 150px;
+        user-select: none;
+        align-self: center;
+    }
+    
+    #logo a {
+        font-size: 20px;
+    }
+
+    .opening-hours, .search {
+        display: none;
+    }
+
+    .hamburger-icon {
+        display: block;
+        align-self: center;
+    }
+
+    .nav ul {
+        display: none;
+        position: absolute;
+        top: 90px;
+        left: 0;
+        height: 305px;
+        width: 100%;
+        z-index: 1;
+        background-color: var(--theme);
+    }
+
+    .nav ul li {
+        margin: 10px 0px 10px 0px;
+        width: 100%;
+        text-align: center;
+        display: flex;
+        padding: 0px;
+    }
+
+    #menu-checkbox:checked~.nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav ul li a {
+        width: 100%;
+        padding: 7px 0px;
+    }
+}
+
+@media (max-width: 1170px) {
+    footer {
+        padding: 50px 20px 30px 20px;
+    }
+}
+
+@media (max-width: 660px) {
+    footer .f-content .f-content-flex {
+        flex-flow: column nowrap;
+    }
+
+    footer .f-content .f-links .f-links-title {
+        margin-top: 30px;
+    }
 }
