--- a/css/style.css
+++ b/css/style.css
@@ -43,3 +43,21 @@ h1.title {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+/* Transitions */
+h1.title, div.margins {
+    transition: 0.1s;
+}
+
+
+/*Media queries*/
+@media only screen and (max-width: 1300px) {
+    div.margins {
+      margin: 0px 20px;
+    }
+  
+    h1.title {
+      font-size: 40px;
+      text-align: center;
+    }
+  }
