--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -80,12 +80,17 @@
         url(../images/cards/about-us-card.jpg) no-repeat center center;
 }
 
-#card-1, #card-2, #card-3, #card-4 {
+#card-1,
+#card-2,
+#card-3,
+#card-4 {
     background-size: cover;
 }
 
 /* transitions */
-.hero, .cards, .card {
+.hero,
+.cards,
+.card {
     transition: 0.1s;
 }
 
@@ -115,7 +120,7 @@
         margin: 40px 20px;
         gap: 20px;
     }
-    
+
     .card {
         height: 110px;
         width: 100%;
